--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "${REDIS_PORT}"
     restart: always
   mongo:
-    image: example_mongo
+    image: mongo:4.2.7-bionic
     container_name: "mongo"
     ports:
       - "${MONGO_PORT}:27017"
